--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,8 @@
     <string name="app_name">RoadMaster</string>
     <string name="greeting_text">Salut, %s</string>
     <string name="number_histories">Quiz-uri totale: %d</string>
+    <string name="history_category">Categoria: %s</string>
+    <string name="history_correct_answer_nr">Raspunsuri corecte: %d</string>
+    <string name="history_result">Rezultat: %s</string>
+    <string name="history_date">Data: %s</string>
 </resources>
